sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:7: error: '(' expected but identifier found.
	if plusPetit(k,k+1) {echange(k,k+1)
           ^AlgGnomeSort:12: error: illegal start of simple expression
}
^